--- a/presentations.css
+++ b/presentations.css
@@ -20,13 +20,13 @@
   margin-bottom: 15px;
 }
 
-
 .presentation-card p {
   font-size: 16px;
   line-height: 1.6;
   margin: 0;
   color: #333;
   font-family: "Times New Roman", Times, serif;
+  text-align: justify; /* Added justification */
 }
 
 h2 {
